Individual-Homework/04-week-04/iac/1-vpc.tf
# Deploy Virtual Private Cloud

resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "main"
  }


}
